--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -15,5 +15,11 @@ jobs:
             go-version: 1.16.x
         - name: Checkout code
           uses: actions/checkout@v2
+        - name: Reuse Cache
+          uses: actions/cache@v2
+          id: feed-cache
+          with:
+            path: /var/cache/feed2tg
+            key: ${{ runner.os }}-feed-cache
         - name: build
-          run: go run main.go --tg_token=${{secrets.TG_TOKEN}} --tg_channel=${{secrets.TG_CHANNEL}} --proxy=
+          run: go run main.go --tg_token=${{secrets.TG_TOKEN}} --tg_channel=${{secrets.TG_CHANNEL}} --cache=/var/cache/feed2tg --proxy=
